# cocochain

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  SIMULATION_README.md  authentication_latencies.csv  authentication_latency_boxplot.eps  handover_success_rate_vs_speed.eps  handover_success_rates.csv  highway_analysis_report.txt  run_highway_simulation.sh  run_simulation.sh  summary_statistics.csv
ned/: CoCoChainApp.ned  CoCoChainNetwork.ned  HighwayNetwork.ned  RSU.ned  RSUApp.ned  Vehicle.ned  VehicleApp.ned  package.ned
results/: performance_table.tex
scripts/: analyze_highway.py  analyze_hybrid_results.py  analyze_results.py  demo_complete.py  demo_hybrid_iov.py  demo_results.py  generate_plots.py  hybrid_iov_simulation.py  run_adversary_tests.py  test_cocochain.py  test_highway.py  validate_highway.py
simulations/: highway.ini  omnetpp.ini
src/: CoCoChainApp.cc  CoCoChainApp.h  HighwayStructures.h  RSUApp.cc  RSUApp.h  VehicleApp.cc  VehicleApp.h
